# trigger_phos

./: AliPHOSEMCRawReader.cxx  AliPHOSEMCRawReader.h  AliPHOSRawReader.cxx  AliPHOSRawReader.h  AliPHOSTRUCalibData.h  AliPHOSTRURawReader.cxx  AliPHOSTRURawReader.h  AliPHOSTRURegionRawReader.cxx  AliPHOSTRURegionRawReader.h  AliPHOSTriggerAnalysis.cxx  AliPHOSTriggerAnalysis.h  AliPHOSTriggerAnalysisHistograms.cxx  AliPHOSTriggerAnalysisHistograms.h  AliPHOSTriggerParam.h  AliPHOSTriggerParameters.cxx  AliPHOSTriggerParameters.h  AliPHOSTriggerRawReader.cxx  AliPHOSTriggerRawReader.h  AliTRUPedestalAnalysis.cxx  AliTRUPedestalAnalysis.h  AliTRUPedestalOutput.cxx  AliTRUPedestalOutput.h  CMakeLists.txt  extractTRUPedestals.C  phosTriggerAnalysis.C  readTRUPedestals.C  runPHOSTriggerAnalysis.C  runTRUPedestalAnalysis.C  testExtractTRUPedestals.C  testReadTRUPedestals.C  truPedestalAnalysis.C
cmake/Modules/: FindALIROOT.cmake
data/: alien_163756.txt
old/: AliPHOSEMCRawReader.cxx  AliPHOSRawReader.cxx  AliPHOSRawReader.h  AliPHOSTriggerAnalysis.cxx  AliPHOSTriggerAnalysis.h  AliPHOSTriggerAnalysisHistograms.cxx  diff.C  extractTRUPedestals.C  readTRUPedestals.C  runPHOSTriggerAnalysis.C  testReadTRUPedestals.C
